--- a/devcontainer/devcontainer.json
+++ b/devcontainer/devcontainer.json
@@ -11,17 +11,21 @@
 			[
 				"ms-vscode.cpptools",
 				"mcu-debug.debug-tracker-vscode",
+				"mcu-debug.peripheral-viewer",
 				"marus25.cortex-debug",
 				"ms-vscode.cmake-tools",
 				"streetsidesoftware.code-spell-checker",
 				"eamodio.gitlens",
         		"mhutchie.git-graph",
-        		"ms-vscode.hexeditor"
+        		"ms-vscode.hexeditor",
+				"xaver.clang-format"
 			],
 			"settings": 
 			{
 				"dockerRunArgs": ["-m", "1024M"]
 			}
 		}
-	}
+	},
+
+	"postAttachCommand": "bash tools/scripts/setup-devcontainer-env.sh"
 }
