clean up cmake files update debian setup (docker file) use docker image instead of docker file (keep docker file as backup)

--- a/cmake/launch.json.in
+++ b/cmake/launch.json.in
@@ -16,7 +16,7 @@
         "runToEntryPoint": "main",
         "servertype": "jlink",
         "showDevDebugOutput": "both",
-        "device": "STM32L476RG",
+        "device": "@DEVICE@",
         "interface": "swd",
         "svdFile": "${workspaceRoot}/src/hardware/platform/stm32l476xx.svd",
         "rttConfig": {
