--- a/devcontainer/devcontainer.json
+++ b/devcontainer/devcontainer.json
@@ -2,7 +2,7 @@
 // README at: https://github.com/devcontainers/templates/tree/main/src/debian
 {
 	"name": "ARM Cortex-M Development",
-	"dockerFile": "Dockerfile",
+	"image": "ch0r0k/arm-gcc-development:v1.0",
 	"customizations": {
 		"vscode": {
 			"extensions": [
